fix index button layout shifting problem due to letter spacing

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -643,6 +643,9 @@ html, body {
     color: white;
     letter-spacing: 2px;
   }
+  .level_target_word {
+    padding-right: 2px;
+  }
   .chapter {
     text-transform: uppercase;
     color: #eee;
